handlebar functionality updated

--- a/src/main/resources/templates/contactsUs.hbs
+++ b/src/main/resources/templates/contactsUs.hbs
@@ -13,7 +13,7 @@
                 <div class="col-md-10 mx-auto col-lg-6">
                     <form action="/Submission" class="p-4 p-md-5 border rounded-3 bg-danger bg-opacity-25">
                         <div class="row g-2">
-                            <p class="fs-5"> Contact Form</p>
+                            <p class="fs-2"> Contact Form</p>
                             <div class="col-md">
                                 <div class="form-floating mb-3">
                                     <input name="name" type="text" class="form-control" id="floatingInputGrid" placeholder="Enter your names" autocomplete="off" required>
@@ -30,7 +30,7 @@
                                 <div class="form-floating">
                                     <textarea name="message" class="form-control mb-3" placeholder="Leave your message here" id="floatingTextarea2" required autocomplete="off" style="height: 100px"></textarea>
                                     <label for="floatingTextarea2">Message</label>
-                                    <button class="w-100 btn btn-lg btn-primary" type="submit">Send Message</button>
+                                    <button class="w-100 btn btn-lg btn-danger" type="submit">Send Message</button>
                                 </div>
                             </div>
                     </div>
