--- a/src/main/resources/templates/events.hbs
+++ b/src/main/resources/templates/events.hbs
@@ -4,7 +4,7 @@
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Events Line up</h1>
             <p class="col-md-8 fs-4">Don't have you weekend plans? We've got you! </p>
-            <a href="/#eventcard" class="btn btn-primary btn-lg" type="button">Find an Event</a>
+            <a href="/#eventcard" class="btn btn-danger btn-lg" type="button">Find an Event</a>
         </div>
     </div>
 
@@ -30,7 +30,7 @@
                                 <a type="button" class="btn btn-sm btn-danger" href="/event-layout">View</a>
                                 <a href="/event-layout#BuyTicket" type="button" class="btn btn-sm btn-danger">Buy Ticket</a>
                                 <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3"/></svg>
-                                    <small><span class="badge bg-primary">16/06</span></small>
+                                    <small><span class="badge bg-danger">16/06</span></small>
                             </li>
                         </ul>
 
