--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -11,46 +11,45 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#FF1493"/></svg>
-
+                    <img src="/images/5.jpg" alt="6" width="100%" height="100%">
                     <div class="container">
-                        <div class="carousel-caption">
-                            <h1>Blanket and Wine</h1>
+                        <div class="carousel-caption bg-dark bg-opacity-75">
+                            <h1>Advertize your event with us</h1>
                             <p>Some representative placeholder content for the first slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                            <p><a class="btn btn-lg btn-danger" href="/about">Sign up today</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#FFA500"/></svg>
+                    <img src="/images/6.jpg"  alt="6" width="100%" height="100%">
 
                     <div class="container">
-                        <div class="carousel-caption">
-                            <h1>Kibao and Lesos</h1>
+                        <div class="carousel-caption bg-dark bg-opacity-75">
+                            <h1>Wine and Cheese Tasting Events</h1>
                             <p>Some representative placeholder content for the second slide of the carousel.</p>
-                            <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                            <p><a class="btn btn-lg btn-danger" href="/events">Learn more</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#4169E1"/></svg>
+                    <img src="/images/4.jpg" alt="4" width="100%" height="100%">
 
                     <div class="container">
-                        <div class="carousel-caption">
+                        <div class="carousel-caption bg-dark bg-opacity-75">
                             <h1>Safaricom Jazz Night</h1>
                             <p>Some representative placeholder content for the third slide of this carousel.</p>
-                            <p><a class="btn btn-lg btn-warning" href="#">Browse gallery</a></p>
+                            <p><a class="btn btn-lg btn-danger" href="/events">Browse Events</a></p>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#0ff"/></svg>
+                    <img src="/images/5.jpeg" alt="6" width="100%" height="100%">
 
                     <div class="container">
-                        <div class="carousel-caption">
-                            <h1>Safaricom Jazz Night</h1>
+                        <div class="carousel-caption bg-dark bg-opacity-75">
+                            <h1>Blanket and Wine</h1>
                             <p>Some representative placeholder content for the third slide of this carousel.</p>
-                            <p><a class="btn btn-lg btn-warning" href="#">Browse gallery</a></p>
+                            <p><a class="btn btn-lg btn-danger" href="/">Browse gallery</a></p>
                         </div>
                     </div>
                 </div>
@@ -75,28 +74,26 @@
             <!-- Three columns of text below the carousel -->
             <div class="row">
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                    <img src="/images/13.png" alt="6" width="140" height="140" class="bd-placeholder-img rounded-circle my-3">
 
-                    <h2 class="fw-normal">Heading</h2>
-                    <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                    <h2 class="fw-normal">Buy your Ticket</h2>
+                    <p>Tired of the long queues during your favorite event. Purchase your ticket now.</p>
+                    <p><a class="btn btn-danger" href="/">Buy Now &raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-
-                    <h2 class="fw-normal">Heading</h2>
-                    <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                    <img src="/images/12.jpg" alt="6" width="140" height="140" class="bd-placeholder-img rounded-circle my-3">
+                    <h2 class="fw-normal">Advertise with us</h2>
+                    <p>Publicize your event with us. Enjoy our free Digital Marketing plan</p>
+                    <p><a class="btn btn-danger" href="/">Contact us&raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
                 <div class="col-lg-4">
-                    <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+                    <img src="/images/11.jpg" alt="6" width="140" height="140" class="bd-placeholder-img rounded-circle my-3">
 
-                    <h2 class="fw-normal">Heading</h2>
-                    <p>And lastly this, the third column of representative placeholder content.</p>
-                    <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+                    <h2 class="fw-normal"> About n-tiko</h2>
+                    <p>We brings the youth together through live experiences near them.</p>
+                    <p><a class="btn btn-danger" href="/">Read More&raquo;</a></p>
                 </div><!-- /.col-lg-4 -->
             </div><!-- /.row -->
-
 
             <!-- START THE FEATURETTES -->
 
@@ -104,11 +101,12 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-                    <p class="lead">Some great placeholder content for the first featurette here. Imagine some exciting prose here.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">BargainBox. <span class="text-muted">Marula Manor, Karen</span></h2>
+                    <p class="lead">BargainBox offers the most Selective and Sophisticated Up -market sale bonanza in Nairobi; the perfect concept to once again entice customers and give ...</p>
+                    <p><a class="btn btn-lg btn-danger" href="/about">Early Bird Ticket</a></p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+                    <img src="/images/5.jpg" alt="6" width="100%" height="100%" class="my-5">
 
                 </div>
             </div>
@@ -117,11 +115,12 @@
 
             <div class="row featurette">
                 <div class="col-md-7 order-md-2">
-                    <h2 class="featurette-heading fw-normal lh-1">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-                    <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+                    <h2 class="featurette-heading fw-normal ms-5 lh-1">Are you Ready for the <span class="text-muted">Concours d’Elegance 2022?</span></h2>
+                    <p class="lead ms-5">The CBA Africa Concours d'Elegance, organized by the Alfa Romeo Owners Club and open to all makes of cars and motorcycles, is the classiest event on the...</p>
+                    <p><a class="btn btn-lg btn-danger ms-5" href="/events">Buy your Ticket</a></p>
                 </div>
                 <div class="col-md-5 order-md-1">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+                    <img src="/images/7.jpg" alt="6" width="500" height="500" class="my-5">
 
                 </div>
             </div>
@@ -130,16 +129,15 @@
 
             <div class="row featurette">
                 <div class="col-md-7">
-                    <h2 class="featurette-heading fw-normal lh-1">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-                    <p class="lead">And yes, this is the last block of representative placeholder content. Again, not really intended to be actually read, simply here to give you a better view of what this would look like with some actual content. Your content.</p>
+                    <h2 class="featurette-heading fw-normal lh-1">Advertise Your Event <span class="text-muted">with us today</span></h2>
+                    <p class="lead">Advertise your events with us today and enjoy access to our clientele database and free digital marketing plan. To learn more</p>
+                    <p><a class="btn btn-lg btn-danger" href="/about">Register Here</a></p>
                 </div>
                 <div class="col-md-5">
-                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+                    <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid my-5 mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#FF7F50"/><text x="50%" y="50%" fill="#ffffff" dy=".3em">Advertise Here</text></svg>
 
                 </div>
             </div>
-
-            <hr class="featurette-divider">
 
             <!-- /END THE FEATURETTES -->
 
